<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_toolbar">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="refresh_search">Обновить</string>
    <string name="internet_error2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="internet_error1">Проблемы со связью</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="search_history_textview">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_track_time">00:00</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="playlist_not_found">Вы не создали\n ни одного плейлиста</string>
    <string name="favorite_tracks_not_found">Ваша медиатека пуста</string>
    <string name="media_menu">Медиатека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="description">Описание</string>
    <string name="playlist_name">Название*</string>
    <string name="create">Создать</string>
    <string name="track">" треков"</string>
    <string name="toast_track_add_true">Трек уже добавлен в плейлист %1$s</string>
    <string name="toast_track_add_false">Добавлено в плейлист %1$s</string>
    <string name="end">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="delete_plalist">Удалить плейлист</string>
    <string name="do_you_want_to_delete_a_playlist">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="toast_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track">Удалить трек</string>
    <string name="message_dialog">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="cancel_dialog">Отмена</string>
    <string name="delete">Удалить</string>
    
    <plurals name="trackCountEnd">
        <item quantity="one">трек</item>
        <item quantity="two">трека</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>

</resources>