<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/bBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomToolbarStyle"
        app:title="@string/settings" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/SettingsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingTop="11dp"
            android:paddingEnd="12dp"
            android:paddingBottom="11dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_app" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:padding="19dp"
            android:src="@drawable/share_icon" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_to_support" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:padding="19dp"
            android:src="@drawable/support_icon" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/arrowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:padding="19dp"
            android:src="@drawable/arrow_icon" />

    </FrameLayout>


</LinearLayout>