<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySearch">

    <Toolbar
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/back_icon"
        android:title="@string/search_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        android:layout_marginVertical="8dp"
        android:background="@drawable/search_background"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/editTextSearch"
            style="@style/SearchStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="10dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="4dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/android_icon"
            android:visibility="invisible" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="visible"
        android:id="@+id/recyclerviewTrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_item" />

<LinearLayout
    android:id="@+id/trackNotFound"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:id="@+id/errorsImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="102dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/errors_light_mode_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="19sp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/search_not_found"/>
</LinearLayout>


<LinearLayout
    android:id="@+id/internetError"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:id="@+id/internetErrorsImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="102dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/internet_error_light_mode_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="19sp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/internet_error1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="19sp"
        android:fontFamily="@font/ys_display_medium"
        android:textAlignment="center"
        android:text="@string/internet_error2"/>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ActivitySearchButton"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:text="@string/refresh_search" />
</LinearLayout>


</LinearLayout>