<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="52dp"
        android:padding="10dp"
        android:text="@string/playlist_maker"
        android:textColor="@color/background_color"
        android:textSize="22sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/main_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/background_color"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/search"
        android:textColor="@color/text_color_main"
        android:textSize="22sp"
        app:cornerRadius="@dimen/main_margin"
        app:icon="@drawable/search_icon"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/background_color"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/media"
        android:textColor="@color/text_color_main"
        android:textSize="22sp"
        app:cornerRadius="@dimen/main_margin"
        app:icon="@drawable/media_icon"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/background_color"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/settings"
        android:textColor="@color/text_color_main"
        android:textSize="22sp"
        app:cornerRadius="@dimen/main_margin"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />


</LinearLayout>