<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    android:orientation="vertical"
    tools:context=".search.ui.fragment.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomToolbarStyle"
        app:title="@string/search_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        android:layout_marginVertical="8dp"
        android:background="@drawable/search_background"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/etSearch"
            style="@style/SearchStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="10dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="4dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/ivClearIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/android_icon"
            android:visibility="invisible" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchTrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_item" />

    <LinearLayout
        android:id="@+id/llTrackNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"
            app:srcCompat="@drawable/errors_light_mode_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search_not_found"
            android:textSize="19sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llInternetError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"
            app:srcCompat="@drawable/internet_error_light_mode_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/internet_error1"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/internet_error2"
            android:textAlignment="center"
            android:textSize="19sp" />

        <Button
            android:id="@+id/bRefresh"
            style="@style/ActivitySearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/refresh_search" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/svHistoryTrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_medium"
                android:paddingTop="18dp"
                android:paddingBottom="12dp"
                android:text="@string/search_history_textview"
                android:textAlignment="center"
                android:textSize="19sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistoryTrack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/track_item" />

            <Button
                android:id="@+id/bCleanHistory"
                style="@style/ActivitySearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/clean_history" />


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:indeterminateTint="@color/switch_color"
        android:visibility="gone" />


</LinearLayout>