<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySettings">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/back_icon" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:paddingStart="12dp"
            android:paddingTop="14dp"
            android:paddingBottom="@dimen/main_margin"
            android:text="@string/settings"
            android:textColor="@color/text_color_main"
            android:textSize="22sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/main_margin"
            android:paddingTop="@dimen/settings_dp"
            android:paddingBottom="@dimen/settings_dp"
            android:text="@string/dark_theme"
            android:textColor="@color/settings_color_text"
            android:textSize="16sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingTop="11dp"
            android:paddingEnd="12dp"
            android:paddingBottom="11dp"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/main_margin"
            android:paddingTop="@dimen/settings_dp"
            android:paddingBottom="@dimen/settings_dp"
            android:text="@string/share_app"
            android:textColor="@color/settings_color_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:padding="19dp"
            android:src="@drawable/share_icon" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/main_margin"
            android:paddingTop="@dimen/settings_dp"
            android:paddingBottom="@dimen/settings_dp"
            android:text="@string/write_to_support"
            android:textColor="@color/settings_color_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:padding="19dp"
            android:src="@drawable/support_icon" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/main_margin"
            android:paddingTop="@dimen/settings_dp"
            android:paddingBottom="@dimen/settings_dp"
            android:text="@string/user_agreement"
            android:textColor="@color/settings_color_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:padding="19dp"
            android:src="@drawable/arrow_icon" />

    </FrameLayout>


</LinearLayout>