<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    android:orientation="vertical"
    tools:context=".media.ui.fragment.EditPlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        style="@style/CustomToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_icon"
        app:title="@string/edit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPlaylistImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/theme_color"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar">

        <ImageView
            android:id="@+id/playlistImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/add_photo" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/etPlaylistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_border_empty"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/playlist_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingTop="18dp"
        android:paddingBottom="19dp"
        android:singleLine="true"
        android:textColorHint="@color/theme_color_night"
        app:layout_constraintBottom_toTopOf="@+id/etDescription"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/cardViewPlaylistImage" />

    <TextView
        android:id="@+id/tvPlaylistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/theme_color"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="3dp"
        android:text="@string/playlist_name"
        android:textColor="@color/main_background_color"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/etPlaylistName"
        app:layout_constraintStart_toStartOf="@id/etPlaylistName"
        app:layout_constraintTop_toTopOf="@+id/etPlaylistName" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border_empty"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingTop="18dp"
        android:paddingBottom="19dp"
        android:singleLine="true"
        android:textColorHint="@color/theme_color_night"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/etPlaylistName" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/theme_color"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="3dp"
        android:text="@string/description"
        android:textColor="@color/main_background_color"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/etDescription"
        app:layout_constraintStart_toStartOf="@id/etDescription"
        app:layout_constraintTop_toTopOf="@+id/etDescription" />

    <Button
        android:id="@+id/editPlaylistButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/track_item_text"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/edit_save"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder" />

</androidx.constraintlayout.widget.ConstraintLayout>